<resources>
    <string name="news">通讯录</string>
    <string name="discovery">短信信息</string>
    <string name="market">功能</string>
    <string name="self_selection">通话记录</string>
    <string name="my">我的</string>

    <string name="internet_error">网络异常</string>
    <string name="internet_timeout">网络超时</string>
    <string name="internet_parse_error">网络解析异常</string>
    <string name="null_data_error">数据为空</string>
    <string name="monday">周一</string>
    <string name="thuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>
    <string name="loading_text">加载中&#8230;</string>
    <string name="no_network">请检查网络后点击重新加载</string>
    <string name="data_error">数据获取失败(ㄒoㄒ)~~</string>
    <string name="empty_view_hint">暂时木有内容呀~~</string>


    <string name="drawer_btn_rss">频道管理</string>
    <string name="subscribe_my_category">我的频道</string>
    <string name="subscribe_more_category">更多频道</string>
    <string name="subscribe_manager_category_info">单击增删频道</string>
    <string name="subscribe_manager_category_info_2">单击增删频道，长按拖拽排序</string>

    <string name="action_reset">Reset</string>
</resources>
