<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:background="@android:color/white"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/newsLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/newsImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/selector_news"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/newsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:gravity="center"
            android:text="@string/news"
            android:textColor="@color/bottomMenuTextColor"
            android:textSize="11sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/discoveryLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/discoveryImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/selector_discovery"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/discoveryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:gravity="center"
            android:text="@string/discovery"
            android:textColor="@color/bottomMenuTextColor"
            android:textSize="11sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/marketLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/marketImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/selector_market"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/marketText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:gravity="center"
            android:text="@string/market"
            android:textColor="@color/bottomMenuTextColor"
            android:textSize="11sp" />

    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/selfSelectionLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/selfSelectionImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/selector_self_selection"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/selfSelectionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:gravity="center"
            android:text="@string/self_selection"
            android:textColor="@color/bottomMenuTextColor"
            android:textSize="11sp" />

    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/myLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/myImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/selector_my"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/myText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:gravity="center"
            android:text="@string/my"
            android:textColor="@color/bottomMenuTextColor"
            android:textSize="11sp" />

    </LinearLayout>

</LinearLayout>